# file-parser-agent-a820eaa4

./: README.md  file-parser-agent-v1-0-export-2026-02-04_1357.json  mcp_config.json  pyproject.toml  render.yaml  requirements.txt  run_cli.py  run_web.py  setup.py
src/: __init__.py  __main__.py  config.py
src/api/: __init__.py  wrapper.py
src/cli/: __init__.py  commands.py
src/mcp/: __init__.py  server.py
src/parsers/: __init__.py  base.py  excel_parser.py  pdf_parser.py  powerpoint_parser.py  word_parser.py
src/services/: __init__.py  parsing_engine.py  vision.py
src/utils/: __init__.py  output_manager.py  validation.py
src/web/: __init__.py  app.py
src/web/templates/: base.html  error.html  index.html  outputs.html  result.html
